--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clsx": "^2.1.1",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.25.48"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
