--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
+    "jotai": "^2.12.5",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
