--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "jotai": "^2.12.5",
